apps/gitea/components/tls/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitea
  namespace: shikanime
spec:
  template:
    spec:
      containers:
        - name: gitea
          volumeMounts:
            - name: tls
              mountPath: /tls
              readOnly: true
      volumes:
        - name: tls
          secret:
            secretName: gitea-tls
