apps/gitea/components/tls/patch-sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: gitea
  namespace: shikanime
spec:
  template:
    spec:
      containers:
        - name: gitea
          readinessProbe:
            httpGet:
              scheme: HTTPS
          livenessProbe:
            httpGet:
              scheme: HTTPS
          startupProbe:
            httpGet:
              scheme: HTTPS
          volumeMounts:
            - name: certs
              mountPath: /etc/ssl/certs
              readOnly: true
            - name: tls
              mountPath: /etc/ssl/private
              readOnly: true
      volumes:
        - name: certs
          configMap:
            name: nishir-ca-certificates.crt
        - name: tls
          secret:
            secretName: gitea-tls
