apps/gitea/components/tls/patch-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea
spec:
  ports:
    - name: https
      port: 443
      targetPort: http
