apps/gitea/components/tls/svc.patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea
  namespace: shikanime
spec:
  ports:
    - name: https
      port: 443
      targetPort: http
