apps/gitea/components/tls/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitea
  namespace: shikanime
spec:
  defaultBackend:
    service:
      name: gitea
      port:
        name: https
